Add remaining last content

--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -13,3 +13,9 @@ nav:
   - 'wat-is-git.md'
   - 'waarom-git-gebruiken.md'
   - 'hoe-werkt-git.md'
+  - 'symantic-versioning.md'
+  - 'repository-layout.md'
+  - 'workflow.md'
+  - 'live-demo.md'
+  - 'do-and-dont.md'
+  - 'naslag-git-commandos.md'
